--- a/static/scss/components/_quiz_banner.scss
+++ b/static/scss/components/_quiz_banner.scss
@@ -1,6 +1,6 @@
 .quiz-banner{
     // background-color: rgba(179,222,217,1);
-    background-color: #f58c7c;
+    background-color: $aqua-bg;
     padding: 1em .8em;
     text-align: center;
     width: 100%;
@@ -20,7 +20,7 @@
     }
       
     .normal-text{
-        color: white;
+        color: $base-text-color;
         font-size: 1.1em;
         @media #{$breakpoint-min-md}{
             font-size: .8em;
@@ -35,7 +35,7 @@
         }
     }
     .sect-subtitle{
-        color: white;
+        color: $base-text-color;
         @media #{$breakpoint-min-md}{
             font-size: .7em;
             margin: 0;
